<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PerguntaUmActivity" >

    <TextView
        android:id="@+id/PerguntaUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/PerguntaUm" 
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radioGroupQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PerguntaUm"
        android:layout_marginTop="31dp" >

        <RadioButton
            android:id="@+id/radio1PerguntaUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:text="@string/Radio1PerguntaUm" />

        <RadioButton
            android:id="@+id/radio2PerguntaUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2PerguntaUm" />

        <RadioButton
            android:id="@+id/radio3PerguntaUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3PerguntaUm" />
    
    	<RadioButton
            android:id="@+id/radio4PerguntaUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4PerguntaUm" />
    
    
    
    
    
    </RadioGroup>

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnProximo" />

</RelativeLayout>
