<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PerguntaTresActivity" >

    <TextView
        android:id="@+id/PerguntaTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="13sp"
        android:text="@string/PerguntaTres" />

    <RadioGroup
        android:id="@+id/radioGroupQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PerguntaTres"
        android:layout_marginTop="28dp" >

        <RadioButton
            android:id="@+id/radio1PerguntaTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio1PerguntaTres" />

        <RadioButton
            android:id="@+id/radio2PerguntaTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2PerguntaTres" />

        <RadioButton
            android:id="@+id/radio3PerguntaTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3PerguntaTres" />

        <RadioButton
            android:id="@+id/radio4PerguntaTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4PerguntaTres" />
        
        
        </RadioGroup>

    <Button
        android:id="@+id/btnProximo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnProximo3" />

</RelativeLayout>
