<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PerguntaDoisActivity" >

    <TextView
        android:id="@+id/PerguntaDois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/PerguntaDois" 
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/radioGroupQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PerguntaDois"
        android:layout_marginTop="26dp" >

        <RadioButton
            android:id="@+id/radio1PerguntaDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio1PerguntaDois" />

        <RadioButton
            android:id="@+id/radio2PerguntaDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2PerguntaDois" />

        <RadioButton
            android:id="@+id/radio3PerguntaDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3PerguntaDois" />
 
		
        <RadioButton
            android:id="@+id/radio4PerguntaDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4PerguntaDois" />
 
        
        
        </RadioGroup>

    <Button
        android:id="@+id/btnProximo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:text="@string/btnProximo2" />

</RelativeLayout>
