<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PerguntaQuatroActivity" >

    <TextView
        android:id="@+id/PerguntaQuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:text="@string/PerguntaQuatro" />

    <RadioGroup
        android:id="@+id/radioGroupQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PerguntaQuatro"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/radio1PerguntaQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio1PerguntaQuatro" />

        <RadioButton
            android:id="@+id/radio2PerguntaQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2PerguntaQuatro" />

        <RadioButton
            android:id="@+id/radio3PerguntaQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3PerguntaQuatro" />
    
        <RadioButton
            android:id="@+id/radio4PerguntaQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4PerguntaQuatro" />
    
    
    
    
    
    
    
    </RadioGroup>

    <Button
        android:id="@+id/btnProximo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnProximo4" />

</RelativeLayout>
