<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FimActivity" >

    <TextView
        android:id="@+id/FimJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/FimJogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/FimJogo"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/FimJogo"
        android:layout_below="@+id/FimJogo"
        android:layout_marginTop="87dp"
        android:text="@string/Score" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:text="@string/btnSair"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnJogarNovamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSair"
        android:layout_marginBottom="22dp"
        android:layout_toLeftOf="@+id/btnSair"
        android:text="@string/btnJogarNovamente" />

</RelativeLayout>
